[package]
name = "tbelite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
env_logger = "0.10"
futures = "0.3"
uuid = "1.3.0"
